--- a/setup.yml
+++ b/setup.yml
@@ -1,7 +1,8 @@
 ---
 - hosts: all
+  gather_facts: yes
   become: true
-  become_method: su
+  #become_method: "{{ 'sudo' if ansible_distribution == 'Ubuntu' else 'su' }}"
   vars:
     root_passwd: "{{ lookup('env','PASSWD') | default('') }}" 
     sudo_user:   "{{ lookup('env','USER') | default('') }}"
