--- a/security.yml
+++ b/security.yml
@@ -65,7 +65,7 @@
 
     - name: Override some basic fail2ban configurations
       copy:
-        src: files/jail.local.j2
+        src: jail.local.j2
         dest: /etc/fail2ban/jail.local
         owner: root
         group: root
