--- a/08-kiwiirc.yml
+++ b/08-kiwiirc.yml
@@ -6,6 +6,20 @@
     domain:        "somdomato.com"
   
   tasks:
+    - name: "Firewall rule - Allow connections on port: 6667 and 7778"
+      ansible.builtin.iptables:
+        chain: INPUT
+        protocol: tcp
+        destination_ports:
+          - "6667"
+          - "7778"
+        jump: ACCEPT
+
+    - name: Save current state of the firewall in system file
+      community.general.iptables_state:
+        state: saved
+        path: /etc/iptables/rules.v4
+
     - name: Create a 2048-bit SSH key for user kiwiirc in ~kiwiirc/.ssh/id_rsa
       ansible.builtin.user:
         name: kiwiirc
@@ -43,7 +57,7 @@
 
     - name: Create custom theme directory
       file:
-        path: /usr/share/kiwiirc/static/sdm
+        path: /usr/share/kiwiirc/static/themes/sdm
         state: directory
         owner: kiwiirc
         group: kiwiirc
@@ -52,7 +66,7 @@
     - name: Configure custom theme
       template:
         src: kiwiirc/theme.css.j2
-        dest: /usr/share/kiwiirc/static/sdm/theme.css
+        dest: /usr/share/kiwiirc/static/themes/sdm/theme.css
         owner: kiwiirc
         group: kiwiirc
         mode: '0644'
