--- a/03-security.yml
+++ b/03-security.yml
@@ -50,7 +50,7 @@
 
     - name: Install netfilter-persistent & iptables-persistent packages
       package:
-        name: "{{item}}"
+        name: "{{ item }}"
         state: present
       with_items:
       - iptables-persistent
@@ -70,7 +70,7 @@
 
     - name: Override some basic fail2ban configurations
       copy:
-        src: jail.local.j2
+        src: fail2ban/jail.local.j2
         dest: /etc/fail2ban/jail.local
         owner: root
         group: root
