--- a/04-lep.yml
+++ b/04-lep.yml
@@ -4,15 +4,16 @@
 
   vars:
     domain:       "{{ lookup('env','DOMAIN') | default('nix.radiochat.com.br') }}"
+    ip_addr:      "{{ ansible_default_ipv4.address|default(ansible_all_ipv4_addresses[0]) }}"
     sites:
       - { idx: '02', url: 'somdomato.com' }
       - { idx: '03', url: 'packetloss.com.br' }
       - { idx: '04', url: 'radiochat.com.br' }
-    ip_addr:      "{{ ansible_default_ipv4.address|default(ansible_all_ipv4_addresses[0]) }}"
 
     nginx_user:   "nginx"
     nginx_passwd: "{{ lookup('env','PASSWD') | default('') }}" 
     php_version:  "8.0"
+
     packages:
       - "nginx"
       - "php{{ php_version }}-fpm"
@@ -22,6 +23,17 @@
       - "php{{ php_version }}-sqlite3"
 
   tasks:
+    - name: Install required packages
+      apt:
+        pkg:
+          - apt-transport-https
+          - gnupg2
+
+    - name: Add Surý APT key
+      ansible.builtin.apt_key:
+        url: https://packages.sury.org/php/apt.gpg
+        state: present
+
     - name: Add Surý APT repository
       ansible.builtin.apt_repository:
         repo: "deb https://packages.sury.org/php/ {{ ansible_distribution_release }} main"
